add demonstration for wangdandong/spring-social-wechat

--- a/attic/spring-social-showcase-sec/src/main/resources/views/layout.html
+++ b/attic/spring-social-showcase-sec/src/main/resources/views/layout.html
@@ -44,6 +44,13 @@
 				<li><a th:href="@{/linkedin/connections}">Connections</a></li>
 			</ul>
 			</div>
+
+			<h4><a th:href="@{/wechat}">Wechat</a></h4>
+			<div social:connected="wechat">
+			<ul class="menu">
+				<li><a th:href="@{/wechat}">User Profile</a></li>
+			</ul>
+			</div>
 		</div>
 		
 		<div id="content" layout:fragment="content">
