--- a/attic/spring-social-showcase-sec/src/main/resources/views/signin.html
+++ b/attic/spring-social-showcase-sec/src/main/resources/views/signin.html
@@ -64,6 +64,8 @@
 		 
 			<!-- LINKEDIN SIGNIN -->
 			<p><a th:href="@{/auth/linkedin}">Sign In with LinkedIn</a></p>
+
+			<p><a th:href="@{/auth/wechat}">Sign In with Wechat</a></p>
 		</div>		
 	</body>
 </html>
